--- a/src/web/stylesheets/common/pages/awards/style.scss
+++ b/src/web/stylesheets/common/pages/awards/style.scss
@@ -1,5 +1,6 @@
 @use '../../sass/themes/_default' as gt;
 @use '../../sass/base/_mixins' as gm;
+@use '../../sass/components/controls';
 
 @import './_awardsTheme.js';
 
@@ -25,6 +26,106 @@
       .account-nav-item-container {
         .account-nav-item {
           padding: 0.75rem;
+        }
+      }
+    }
+  }
+
+  .controls {
+    .control {
+      $box-shadow-color: map-get($thememaplight, awards-box-shadow-color);
+
+      border: 1px solid gt.theme-var(awards-controls-border-color, null, $thememaplight, $cssvars);
+      box-shadow: 0px 4px 4px  $box-shadow-color;
+    }
+
+    .sort-dropdown {
+      .sort-dropdown-toggle {
+        background-color: gt.theme-var(bg-1);
+        color: gt.theme-var(awards-text-color-1, null, $thememaplight, $cssvars);
+      }
+
+      .dropdown-menu {
+        .dropdown-item {
+          background: none;
+          color: gt.theme-var(awards-text-color-1, null, $thememaplight, $cssvars);
+        }
+
+        .dropdown-item-container {
+          .ascending-descending-selectors {
+
+            button:active,
+            button.active {
+              background-color: gt.theme-var(awards-body-bg, null, $thememaplight, $cssvars);
+            }
+          }
+        }
+      }
+    }
+
+    .search-box-with-icon {
+      .awards-search-box {
+        color: gt.theme-var(awards-text-color-1, null, $thememaplight, $cssvars);
+
+        &::placeholder {
+          color: gt.theme-var(awards-text-color-1, null, $thememaplight, $cssvars);
+        }
+      }
+    }
+  }
+
+  .award-cards-container {
+    margin-top: 1rem;
+    background-color: white;
+    border-radius: 12px;
+    // background-color: gt.theme-var(awards-bg-1, null, $thememaplight, $cssvars);
+  }
+
+  .award-card:hover+.award-info {
+    display: flex;
+  }
+
+  .pointer-cursor {
+    cursor: pointer;
+  }
+
+  .award-info {
+    display: none;
+    align-items: center;
+    gap: 1rem;
+    position: absolute;
+    z-index: 1;
+    min-width: 350px;
+    background-color: white;
+    border-radius: 12px;
+    padding: 1rem;
+
+    img {
+      height: 30px;
+    }
+
+    .award-title {
+      margin: 0;
+    }
+
+    .award-details {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+
+      .progress-bar {
+        border-radius: 20px;
+        width: 100%;
+        height: 0.4rem;
+        margin-top: 1rem;
+        background-color: gt.theme-var(awards-body-bg, null, $thememaplight, $cssvars);
+
+        .progress {
+          $color1 : gt.theme-var(awards-gradient-color-1, null, $thememaplight, $cssvars);
+          $color2 : gt.theme-var(awards-gradient-color-2, null, $thememaplight, $cssvars);
+
+          width: 50%;
+          background: linear-gradient(270deg, $color1, $color2);
         }
       }
     }
