--- a/src/web/stylesheets/common/pages/challenges/style.scss
+++ b/src/web/stylesheets/common/pages/challenges/style.scss
@@ -510,15 +510,24 @@ $challenge-item-image-height-down-md: 8.25rem;
             .challenge-block {
               .challenge-img {
                 margin-bottom: 0.5rem;
+                width: 100%;
+                height: 12rem;
+                aspect-ratio: 16/9;
+                background: white;
+                border-radius: 0.75rem;
+
+                @include gm.media-breakpoint-down(xl) {
+                  height: 10rem;
+                }
+
+                @include gm.media-breakpoint-down(md) {
+                  height: $challenge-item-image-height-down-md;
+                }
 
                 img {
-                  aspect-ratio: 16/9;
                   width: 100%;
+                  height: 100%;
                   border-radius: 0.75rem;
-
-                  @include gm.media-breakpoint-down(md) {
-                    height: $challenge-item-image-height-down-md;
-                  }
                 }
               }
 
@@ -544,6 +553,9 @@ $challenge-item-image-height-down-md: 8.25rem;
         .navigation-slide {
           $color: map-get($thememaplight, challenges-text-color-3);
 
+          width: 100%;
+          height: 12rem;
+          aspect-ratio: 16/9;
           border-radius: 0.75rem;
           color: gt.theme-var(challenges-text-color-3, null, $thememaplight, $cssvars);
           background-color: gt.theme-var(bg-1);
@@ -552,13 +564,20 @@ $challenge-item-image-height-down-md: 8.25rem;
           align-items: center;
           text-decoration: none;
 
+          @include gm.media-breakpoint-down(xl) {
+            height: 10rem;
+          }
+
           @include gm.media-breakpoint-down(md) {
             height: $challenge-item-image-height-down-md;
           }
+          // @include gm.media-breakpoint-down(md) {
+          //   height: $challenge-item-image-height-down-md;
+          // }
 
-          @include gm.media-breakpoint-up(md) {
-            aspect-ratio: 16/9;
-          }
+          // @include gm.media-breakpoint-up(md) {
+          //   aspect-ratio: 16/9;
+          // }
 
           &:hover {
             color: darken($color, 15);
