--- a/src/web/stylesheets/common/pages/clubs/style.scss
+++ b/src/web/stylesheets/common/pages/clubs/style.scss
@@ -611,11 +611,11 @@
                 border-radius: 0.75rem;
                 background-color: gt.theme-var(bg-1);
                 margin-bottom: 1rem;
-  
+
                 .feed-title {
                   background-color: gt.theme-var(bg-3);
                   padding: 1rem;
-  
+
                   img {
                     width: 2.5rem;
                     height: 2.5rem;
@@ -623,10 +623,10 @@
                     margin-right: 0.5rem;
                   }
                 }
-  
+
                 .feed-content {
                   padding: 2rem 2.5rem;
-  
+
                   .feed-icon {
                     img {
                       width: 1.5rem;
@@ -638,26 +638,83 @@
               }
             }
 
+            &#members-tab {
+              .club-leaderboard-container {
+                .club-leaderboard-header {
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                  margin: 0 0 1rem 0;
+
+                  .sort-btn {
+                    background-color: gt.theme-var(bg-1);
+                    border-radius: 0.5rem;
+                    border: 1px solid gt.theme-var(club-btn-bg, null, $thememaplight, $cssvars);
+
+                    p {
+                      color: gt.theme-var(text-color-5);
+                      font-weight: normal;
+                      font-size: 0.875rem;
+
+                      span {
+                        color: gt.theme-var(text-color-1);
+                      }
+                    }
+                  }
+                }
+
+                .club-leaderboard-data {
+                  .club-member-row {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    padding: 0.5rem 1rem;
+                    border-radius: 0.75rem;
+
+                    &:hover {
+                      cursor: pointer;
+                      background-color: gt.theme-var(club-underline-color, null, $thememaplight, $cssvars);
+                    }
+
+                    // &.current-user {
+                    //   background-color: gt.theme-var(club-progress-bar-bg, null, $thememaplight, $cssvars);
+                    // }
+
+                    .club-member-img-container {
+                      margin: 0 0.5rem 0 1.5rem;
+
+                      .club-member-img {
+                        width: 2.5rem;
+                        height: 2.5rem;
+                        border-radius: 50%;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+
             &#more-tab {
               input[type=text] {
                 &:not([disabled], [readonly]) {
                   background-color: gt.theme-var(bg-1);
                 }
+
                 padding: 0.5rem 1rem;
                 outline: none;
                 box-shadow: none;
               }
-    
+
               input,
               select {
                 border-color: gt.theme-var(club-progress-bar-bg, null, $thememaplight, $cssvars);
                 border-radius: 0.5rem;
               }
-  
+
               .club-image-upload {
                 display: grid;
                 place-content: center;
-  
+
                 .club-image-container {
                   position: relative;
                   background-color: gt.theme-var(bg-1);
@@ -666,27 +723,27 @@
                   height: 40vh;
                   aspect-ratio: 1/1;
                   margin: auto;
-  
+
                   .club-display-picture {
                     width: 100%;
                     height: 100%;
                     border-radius: 0.75rem;
                   }
-  
+
                   .image-edit-btn {
                     input[type=file] {
                       width: 0;
                       height: 0;
                     }
-  
+
                     .image-edit-icon {
                       position: absolute;
                       right: 1rem;
                       bottom: 1rem;
-  
+
                       &:hover {
                         cursor: pointer;
-  
+
                         img {
                           filter: drop-shadow(2px 4px 6px gt.theme-var(text-color-1));
                           border-radius: 50%;
@@ -701,7 +758,6 @@
                 // max-height: 150%;
                 box-shadow: 0 2px 0.5rem gt.theme-var(bg-2);
                 border-radius: 0.5rem;
-  
               }
 
               .autocomplete-loading-container {
@@ -713,7 +769,7 @@
                 .club-members-container {
                   background-color: gt.theme-var(bg-1);
                   border-radius: 0.75rem;
-                  padding: 1rem;
+                  padding: 1rem 0;
                   display: grid;
                   gap: 0.25rem;
                   margin-bottom: 1rem;
@@ -722,17 +778,23 @@
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
-  
+                    padding: 0 1rem;
+
+                    &:hover {
+                      cursor: pointer;
+                      background-color: gt.theme-var(club-underline-color, null, $thememaplight, $cssvars);
+                    }
+
                     .club-member-img-container {
                       margin-right: 0.5rem;
-  
+
                       .club-member-img {
                         width: 3rem;
                         height: 3rem;
                         border-radius: 50%;
                       }
                     }
-  
+
                     .club-member-actions {
                       display: grid;
                       grid-template-columns: 1fr 1fr;
@@ -743,7 +805,7 @@
                           visibility: hidden;
                         }
                       }
-  
+
                       .member-remove-btn {
                         &:focus {
                           box-shadow: none;
@@ -783,12 +845,13 @@
 
                   .divider {
                     position: relative;
-  
+                    padding: 0 1rem;
+
                     p {
                       color: gt.theme-var(text-color-5);
                       display: flex;
                       align-items: center;
-  
+
                       span {
                         content: "";
                         flex: 1 1 auto;
@@ -806,11 +869,11 @@
                   border-radius: 0.875rem;
                   background-color: gt.theme-var(bg-1);
                   border: 1px solid gt.theme-var(club-btn-bg, null, $thememaplight, $cssvars);
-  
+
                   &:hover {
                     cursor: pointer;
                   }
-  
+
                   .input-group-append {
                     align-items: center;
                     background-color: transparent;
@@ -826,7 +889,7 @@
                       font-size: 1.25rem;
                     }
                   }
-  
+
                   input {
                     border: none;
                     background-color: transparent;
@@ -839,38 +902,44 @@
 
               .club-advanced-container {
                 height: 45vh;
-  
+
                 .form-group {
                   p {
                     margin-bottom: 0.5rem;
                   }
-  
+
                   button {
                     background-color: gt.theme-var(bg-1);
                     border-radius: 0.75rem;
                     border-color: gt.theme-var(club-advanced-options-color, null, $thememaplight, $cssvars);
                     color: gt.theme-var(club-advanced-options-color, null, $thememaplight, $cssvars);
                     padding: 0.75rem 0;
-    
+
                     &:hover:not([disabled]) {
                       background-color: gt.theme-var(club-advanced-options-color, null, $thememaplight, $cssvars);
                       color: gt.theme-var(text-color-2);
                     }
-  
+
                     &.disabled {
                       color: gt.theme-var(text-color-5);
                       border-color: gt.theme-var(text-color-5);
                     }
                   }
-  
+
                   .admin-delete-msg {
                     color: gt.theme-var(text-color-5);
                   }
                 }
               }
+
+              .club-mob-footer-btn {
+                position: sticky;
+                bottom: 0.5rem;
+                border-radius: 0.75rem;
+                color: gt.theme-var(text-color-2);
+              }
             }
           }
-
         }
       }
     }
@@ -947,10 +1016,12 @@
               display: grid;
               grid-template-columns: 15% 65% 20%;
               align-items: center;
-              margin: 1rem 0;
+              padding: 0.75rem 0.5rem;
+              border-radius: 0.75rem;
 
               &:hover {
                 cursor: pointer;
+                background-color: gt.theme-var(club-underline-color, null, $thememaplight, $cssvars);
               }
 
               .top-members-name {
@@ -961,6 +1032,13 @@
                   margin-right: 0.5rem;
                 }
               }
+            }
+
+            .no-members-row {
+              text-align: center;
+              font-size: 1.25rem;
+              color: gt.theme-var(text-color-4);
+              margin: 1rem 0;
             }
           }
         }
@@ -1014,6 +1092,8 @@
     .modal-content {
       border-radius: 1rem;
       background-color: gt.theme-var(club-body-bg, null, $thememaplight, $cssvars);
+      max-height: 90vh;
+      overflow: auto;
 
       .create-club-container {
         padding: 1.5rem;
@@ -1196,6 +1276,8 @@
         color: gt.theme-var(text-color-2);
         border-top-left-radius: 0 !important;
         border-top-right-radius: 0 !important;
+        position: sticky;
+        bottom: 0;
 
         &:disabled {
           cursor: not-allowed;
@@ -1369,6 +1451,12 @@
                     }
                   }
                 }
+
+                .no-invites {
+                  font-size: 1.5rem;
+                  text-align: center;
+                  color: gt.theme-var(text-color-4);
+                }
               }
             }
 
@@ -1450,7 +1538,7 @@
     &.create-club-mob-modal {
       position: absolute;
       width: 100%;
-      height: 100%;
+      height: 100vh;
       top: 0;
 
       &.fade {
@@ -1497,15 +1585,31 @@
 
     &.club-info-modal {
       .modal-content {
+        max-height: 90vh;
+        overflow: auto;
+
+        .modal-content-container {
+          display: flex;
+          overflow-x: clip;
+
+          .modal-content-children {
+            width: 100%;
+            overflow-x: hidden;
+            transition: all ease 0.5s;
+            // position: relative;
+          }
+        }
+
         .club-info-modal-body {
           width: 70%;
           margin: auto;
           padding: 1rem;
           margin-bottom: 2rem;
+          position: relative;
 
           .nav-tabs {
             border: 0;
-    
+
             .nav-link {
               border: 0;
               font-weight: bold;
@@ -1513,16 +1617,17 @@
               padding: 1rem;
               color: gt.theme-var(text-color-1);
               // border-bottom: 2px solid gt.theme-var(club-underline-color, null, $thememaplight, $cssvars);
-              background: linear-gradient(
-                to right,
-                gt.theme-var(club-underline-color, null, $thememaplight, $cssvars),
-                gt.theme-var(club-underline-color, null, $thememaplight, $cssvars)
-              );
+              background:
+                linear-gradient(
+                  to right,
+                  gt.theme-var(club-underline-color, null, $thememaplight, $cssvars),
+                  gt.theme-var(club-underline-color, null, $thememaplight, $cssvars)
+                );
               background-size: 100% 0.15rem;
               background-position: bottom 0 left 0, bottom 0.15rem left 0;
               background-repeat: no-repeat;
               background-color: transparent;
-    
+
               &.active {
                 background: linear-gradient(to right, gt.theme-var(club-faded-btn-bg, null, $thememaplight, $cssvars), gt.theme-var(club-faded-btn-bg, null, $thememaplight, $cssvars));
                 background-size: 100% 0.15rem;
@@ -1541,11 +1646,12 @@
               &:not([disabled], [readonly]) {
                 background-color: gt.theme-var(bg-1);
               }
+
               padding: 1.25rem 1rem;
               outline: none;
               box-shadow: none;
             }
-  
+
             input,
             select {
               border-color: gt.theme-var(club-progress-bar-bg, null, $thememaplight, $cssvars);
@@ -1599,7 +1705,6 @@
               max-height: 150%;
               box-shadow: 0 2px 0.5rem gt.theme-var(bg-2);
               border-radius: 0.5rem;
-
             }
 
             .autocomplete-loading-container {
@@ -1611,7 +1716,7 @@
               .club-members-container {
                 background-color: gt.theme-var(bg-1);
                 border-radius: 0.75rem;
-                padding: 1rem;
+                padding: 1rem 0;
                 display: grid;
                 margin-bottom: 1rem;
                 gap: 0.5rem;
@@ -1620,6 +1725,12 @@
                   display: flex;
                   align-items: center;
                   justify-content: space-between;
+                  padding: 0 1rem;
+
+                  &:hover {
+                    cursor: pointer;
+                    background-color: gt.theme-var(club-underline-color, null, $thememaplight, $cssvars);
+                  }
 
                   .club-member-img-container {
                     margin-right: 0.5rem;
@@ -1681,6 +1792,7 @@
 
                 .divider {
                   position: relative;
+                  padding: 0 1rem;
 
                   p {
                     color: gt.theme-var(text-color-5);
@@ -1773,17 +1885,202 @@
           }
         }
 
-        .club-info-footer-btn {
+        .club-member-info-body {
+          width: 70%;
+          margin: auto;
+          padding: 1rem;
+          margin-bottom: 2rem;
+          position: relative;
+
+          .member-info-card {
+            background-color: gt.theme-var(bg-1);
+            border-radius: 0.75rem;
+            padding: 1rem;
+            margin-bottom: 1rem;
+
+            .member-profile-img {
+              margin-right: 0.75rem;
+              width: 3rem;
+              height: 3rem;
+              border-radius: 100%;
+            }
+
+            .member-bio {
+              margin-top: 1rem;
+            }
+          }
+
+          .member-points-card {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            place-content: center;
+            gap: 1.5rem;
+            padding: 1rem 0;
+            background-color: gt.theme-var(bg-1);
+            border-radius: 0.75rem;
+            margin: 1rem 0;
+
+            .member-points-img {
+              margin-right: 0.5rem;
+
+              img {
+                width: 1.25rem;
+                height: 1.25rem;
+              }
+            }
+          }
+
+          .member-achievement-container {
+            .achievement-card {
+              background-color: gt.theme-var(bg-1);
+              border-radius: 0.75rem;
+              padding: 1rem;
+              margin: 0.75rem 0;
+              text-align: center;
+
+              .achievement-card-img {
+                width: 2rem;
+                margin: 1rem 0 1.5rem 0;
+
+                img {
+                  width: 2rem;
+                  margin: 1rem 0 1.5rem 0;
+                }
+              }
+            }
+          }
+        }
+
+        .club-info-footer-btn,
+        .member-info-footer-btn {
           color: gt.theme-var(text-color-2);
           border-top-left-radius: 0 !important;
           border-top-right-radius: 0 !important;
+          position: sticky;
+          bottom: 0;
 
           &:disabled {
             cursor: not-allowed;
           }
         }
       }
+    }
 
+    .club-member-info-body {
+      width: 70%;
+      margin: auto;
+      padding: 1rem;
+      margin-bottom: 2rem;
+      position: relative;
+
+      .member-info-card {
+        background-color: gt.theme-var(bg-1);
+        border-radius: 0.75rem;
+        padding: 1rem;
+        margin-bottom: 1rem;
+
+        .member-profile-img {
+          margin-right: 0.75rem;
+          width: 3rem;
+          height: 3rem;
+          border-radius: 100%;
+        }
+
+        .member-bio {
+          margin-top: 1rem;
+        }
+      }
+
+      .member-points-card {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        place-content: center;
+        gap: 1.5rem;
+        padding: 1rem 0;
+        background-color: gt.theme-var(bg-1);
+        border-radius: 0.75rem;
+        margin: 1rem 0;
+
+        .member-points-img {
+          margin-right: 0.5rem;
+
+          img {
+            width: 1.25rem;
+            height: 1.25rem;
+          }
+        }
+      }
+
+      .member-achievement-container {
+        .achievement-card {
+          background-color: gt.theme-var(bg-1);
+          border-radius: 0.75rem;
+          padding: 1rem;
+          margin: 0.75rem 0;
+          text-align: center;
+
+          .achievement-card-img {
+            width: 2rem;
+            margin: 1rem 0 1.5rem 0;
+
+            img {
+              width: 2rem;
+              margin: 1rem 0 1.5rem 0;
+            }
+          }
+        }
+      }
+    }
+
+    &.member-profile-modal,
+    &.member-mob-profile-modal {
+      .member-info-footer-btn {
+        color: gt.theme-var(text-color-2);
+        border-top-left-radius: 0 !important;
+        border-top-right-radius: 0 !important;
+        position: sticky;
+        bottom: 0;
+
+        &:disabled {
+          cursor: not-allowed;
+        }
+      }
+    }
+
+    &.member-mob-profile-modal {
+      // position: absolute;
+      // width: 100%;
+      // height: 100vh;
+      // top: 0;
+
+      &.fade {
+        .modal-dialog {
+          transform: translate(0, 100%);
+        }
+      }
+
+      &.show {
+        .modal-dialog {
+          transform: translate(0, 0);
+        }
+      }
+
+      .modal-dialog {
+        margin: 0;
+
+        .modal-content {
+          height: 100vh;
+          max-height: 100vh;
+          margin: 0;
+          border-radius: 0;
+
+          .club-member-info-body {
+            width: 95%;
+          }
+        }
+      }
     }
   }
 
