--- a/src/web/stylesheets/common/pages/clubs/style.scss
+++ b/src/web/stylesheets/common/pages/clubs/style.scss
@@ -676,9 +676,9 @@
                       background-color: gt.theme-var(club-underline-color, null, $thememaplight, $cssvars);
                     }
 
-                    // &.current-user {
-                    //   background-color: gt.theme-var(club-progress-bar-bg, null, $thememaplight, $cssvars);
-                    // }
+                    &.current-user {
+                      background-color: gt.theme-var(club-current-user-active-bg, null, $thememaplight, $cssvars);
+                    }
 
                     .club-member-img-container {
                       margin: 0 0.5rem 0 1.5rem;
@@ -901,8 +901,6 @@
               }
 
               .club-advanced-container {
-                height: 45vh;
-
                 .form-group {
                   p {
                     margin-bottom: 0.5rem;
@@ -1031,6 +1029,10 @@
                   border-radius: 50%;
                   margin-right: 0.5rem;
                 }
+              }
+
+              .top-members-points {
+                text-align: right;
               }
             }
 
