games branch color conflict resolved

--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -25,9 +25,9 @@ $thememaplight : (
   bg-1: #fff,
   bg-2: #212527,
   bg-3: #ededed,
-  bg-4: #e5e5e5,
-  bg-5: #fafafa,
-  bg-6: #f5f5f5,
+  bg-4: #000,
+  bg-5: #ffffff4d,
+  bg-6: #000000bf,
   bg-7: #adebfdbf,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224140,
@@ -65,9 +65,9 @@ $thememapdark : (
   bg-1: #212527,
   bg-2: #fff,
   bg-3: #ededed,
-  bg-4: #e5e5e5,
-  bg-5: #fafafa,
-  bg-6: #f5f5f5,
+  bg-4: #000,
+  bg-5: #ffffff4d,
+  bg-6: #000000bf,
   bg-7: #adebfdbf,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224140,
