games image for dashboard added, color conflicts fixed

--- a/src/web/stylesheets/common/pages/webkata/style.scss
+++ b/src/web/stylesheets/common/pages/webkata/style.scss
@@ -209,7 +209,7 @@
 
     .question {
       border-radius: 12px;
-      padding: 1.5rem 1.5rem 1.65rem 1.5rem;
+      padding: 1.5rem;
       background-color: white;
       display: flex;
       align-items: center;
@@ -236,7 +236,7 @@
       .mobile-question-revealer {
         border: none;
         border-radius: 12px;
-        padding: 1.5rem 1.5rem 1.65rem 1.5rem;
+        padding: 1rem;
         background-color: white;
         display: flex;
         justify-content: space-between;
