--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -29,6 +29,7 @@ $thememaplight : (
   bg-5: #ffffff4d,
   bg-6: #000000bf,
   bg-7: #adebfdbf,
+  bg-8: #f5f5f5,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224140,
   tc-font-color: #000,
@@ -69,6 +70,7 @@ $thememapdark : (
   bg-5: #ffffff4d,
   bg-6: #000000bf,
   bg-7: #adebfdbf,
+  bg-8: #f5f5f5,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224140,
   tc-font-color: #000,
@@ -108,6 +110,7 @@ $cssvars : (
   bg-5: --bg-5,
   bg-6: --bg-6,
   bg-7: --bg-7,
+  bg-8: --bg-8,
   modal-close-btn-bg: --modal-close-btn-bg,
   skeleton-bg: --skeleton-bg,
   tc-font-color: --tc-font-color,
