--- a/src/web/stylesheets/common/pages/certificates/style.scss
+++ b/src/web/stylesheets/common/pages/certificates/style.scss
@@ -56,7 +56,7 @@
       $box-shadow-color: map-get($thememaplight, certificates-box-shadow-color);
 
       border: 1px solid gt.theme-var(certificates-controls-border-color, null, $thememaplight, $cssvars);
-      box-shadow: 0px 4px 4px $box-shadow-color;
+      box-shadow: 0 4 4 $box-shadow-color;
     }
 
     .sort-dropdown {
@@ -73,7 +73,6 @@
 
         .dropdown-item-container {
           .ascending-descending-selectors {
-
             button:active,
             button.active {
               background-color: gt.theme-var(certificates-body-bg, null, $thememaplight, $cssvars);
@@ -109,7 +108,7 @@
           position: relative;
         }
 
-        .certificate::after {
+        .certificate:after {
           height: 1px;
           display: block;
           width: 95%;
@@ -122,7 +121,7 @@
           transform: translateX(-50%);
         }
 
-        .certificate:last-child::after {
+        .certificate:last-child:after {
           content: none;
         }
       }
@@ -229,13 +228,17 @@
       margin-top: 1rem;
       width: 100%;
       gap: 1rem;
+      border: none;
+      padding: 0;
       border-radius: 12px;
 
       .share-btn {
         color: white;
+        flex: 1;
       }
 
       .download-btn {
+        flex: 1;
         color: gt.theme-var(certificates-btn-text-color, null, $thememaplight, $cssvars);
         background-color: white;
       }
