--- a/src/web/stylesheets/common/pages/zombieLand/style.scss
+++ b/src/web/stylesheets/common/pages/zombieLand/style.scss
@@ -263,6 +263,8 @@
                 width: 100%;
                 height: 100%;
                 position: absolute;
+                border-bottom-left-radius: 0.75rem;
+                border-bottom-right-radius: 0.75rem;
               }
             }
           }
@@ -313,6 +315,21 @@
             line-height: 2;
           }
         }
+
+        .zombieLand-image-preview {
+          width: 100%;
+          aspect-ratio: 4 / 3;
+
+          img {
+            border-radius: 0.75rem;
+          }
+
+          canvas {
+            width: 100%;
+            margin: auto;
+            border-radius: 0.75rem;
+          }
+        }
       }
     }
 
@@ -338,6 +355,8 @@
         box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
         backdrop-filter: blur(16px);
         -webkit-backdrop-filter: blur(16px);
+        border-bottom-left-radius: 0.75rem;
+        border-bottom-right-radius: 0.75rem;
 
         .statement-container {
           .commandBlocks {
@@ -847,6 +866,7 @@
 
       .instruction-picture {
         border-radius: 0.5rem;
+        width: 100%;
       }
     }
 
@@ -881,6 +901,7 @@
         }
 
         p {
+          font-size: 1.125rem;
           line-height: 1.5;
         }
 
