--- a/src/web/stylesheets/common/pages/leaderboard/style.scss
+++ b/src/web/stylesheets/common/pages/leaderboard/style.scss
@@ -1,5 +1,6 @@
 @use '../../sass/themes/_default' as gt;
 @use '../../sass/base/_mixins' as gm;
+@use '../../sass/components/loading';
 
 @import './_leaderboardTheme.js';
 
