--- a/src/web/stylesheets/common/pages/webkata/style.scss
+++ b/src/web/stylesheets/common/pages/webkata/style.scss
@@ -337,6 +337,12 @@
           .tab-pane {
             width: 100%;
             height: 100%;
+
+            .ace_editor {
+              .ace_mobile-menu {
+                display: none;
+              }
+            }
           }
         }
 
