fix: style height in games

--- a/src/web/stylesheets/common/pages/courses/style.scss
+++ b/src/web/stylesheets/common/pages/courses/style.scss
@@ -121,6 +121,8 @@
     height: 6.5rem;
 
     svg {
+      width: 100%;
+
       #gradient {
         .start {
           stop-color: gt.theme-var(videos-progress-gradient-2, null, $thememaplight, $cssvars);
