--- a/src/web/stylesheets/common/pages/more/style.scss
+++ b/src/web/stylesheets/common/pages/more/style.scss
@@ -693,6 +693,62 @@
     }
   }
 
+  .share-certificate-modal {
+    button.close {
+      margin-left: auto;
+      margin-right: 0.3rem;
+      color: gt.theme-var(text-color-2);
+      font-size: 2.5rem;
+      background: gt.theme-var(more-modal-close-btn-bg, null, $thememaplight, $cssvars);
+      padding: 0.125rem 0.6rem 0.45rem;
+      line-height: 0.75;
+      opacity: 1;
+    }
+
+    .share-content {
+      display: grid;
+      place-items: center;
+
+      h5,
+      p {
+        text-align: center;
+      }
+
+      .copy-link-btn {
+        margin: 0 0.25rem;
+        border-width: 2px;
+        border-radius: 0.75rem;
+        font-weight: bold;
+
+        &.btn-outline-primary {
+          &:hover {
+            color: gt.theme-var(text-color-2);
+          }
+        }
+      }
+    }
+
+    .btn-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5rem;
+      margin: 2rem auto;
+      padding: 0;
+
+      .form-group {
+        margin: 0;
+        padding: 0;
+
+        input {
+          border-radius: 0.5rem;
+          border: 1px solid gt.theme-var(more-controls-border-color, null, $thememaplight, $cssvars);
+          background-color: gt.theme-var(bg-1);
+        }
+      }
+    }
+  }
+
   @keyframes refresh {
     0% {
       background-position: -100%;
