add: leaderboard; fix: level component,navbar, collapse issue

--- a/src/web/stylesheets/common/sass/components/_gameLevelComponent.scss
+++ b/src/web/stylesheets/common/sass/components/_gameLevelComponent.scss
@@ -108,11 +108,13 @@
           background: url(../../../../../images/games/level_completed.png) no-repeat center / contain;
         }
 
+        &.current,
         &.current-question,
         &.open {
           background: url(../../../../../images/games/level_current.png) no-repeat center / contain;
         }
 
+        &.current,
         &.current-question {
           transform: scale(1.25);
         }
