--- a/src/web/stylesheets/common/pages/awards/style.scss
+++ b/src/web/stylesheets/common/pages/awards/style.scss
@@ -1,6 +1,7 @@
 @use '../../sass/themes/_default' as gt;
 @use '../../sass/base/_mixins' as gm;
 @use '../../sass/components/controls';
+@use '../../sass/components/award-info';
 
 @import './_awardsTheme.js';
 
@@ -129,11 +130,17 @@
 
     .award-info-container {
       cursor: pointer;
-      visibility: visible;
+      display: flex;
       margin-bottom: 1rem;
       min-width: 300px;
       z-index: unset;
       position: unset;
+
+      .award-info {
+        .next-achievement-subtitle {
+          margin-top: 0.2rem;
+        }
+      }
     }
 
     .see-more-less-btn {
@@ -145,96 +152,6 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-    }
-  }
-
-  .award-info-container {
-    visibility: hidden;
-    display: flex;
-    flex-direction: column;
-    min-width: 350px;
-    border-radius: 12px;
-    background-color: white;
-    position: absolute;
-    z-index: 9999;
-
-    @include gm.box-shadow();
-  }
-
-  .award-card:hover+.award-info-container {
-    visibility: visible;
-  }
-
-  .pointer-cursor {
-    cursor: pointer;
-  }
-
-  .award-info {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    padding: 1rem;
-    flex-direction: row-reverse;
-
-    img {
-      height: 30px;
-      align-self: flex-start;
-    }
-
-    .award-title {
-      margin: 0;
-    }
-
-    .award-subtitle {
-      color: gt.theme-var(awards-text-color-2, null, $thememaplight, $cssvars);
-      margin-top: 0.2rem;
-
-      &.next-achievement-subtitle {
-        margin-top: 1rem;
-      }
-    }
-
-    .award-details {
-      display: flex;
-      flex-direction: column;
-      flex-grow: 1;
-
-      .progress-bar {
-        border-radius: 20px;
-        width: 100%;
-        height: 0.4rem;
-        margin-top: 1.4rem;
-        background-color: gt.theme-var(awards-body-bg, null, $thememaplight, $cssvars);
-        overflow: unset;
-
-        .progress {
-          position: relative;
-          overflow: unset;
-          $color1 : gt.theme-var(awards-gradient-color-1, null, $thememaplight, $cssvars);
-          $color2 : gt.theme-var(awards-gradient-color-2, null, $thememaplight, $cssvars);
-
-          background: linear-gradient(270deg, $color1, $color2);
-
-          .progress-textual-indicator {
-            position: absolute;
-            color: black;
-            right: 0;
-            bottom: 5px;
-            display: flex;
-            flex-direction: column;
-
-            .progress-as-text {
-              position: absolute;
-              right: 50%;
-              transform: translateX(50%);
-            }
-
-            .arrow {
-              margin-top: 3px;
-            }
-          }
-        }
-      }
     }
   }
 
