--- a/src/web/stylesheets/common/pages/more/style.scss
+++ b/src/web/stylesheets/common/pages/more/style.scss
@@ -1,5 +1,6 @@
 @use '../../sass/themes/_default' as gt;
 @use '../../sass/base/_mixins' as gm;
+@use '../../sass/components/award-info';
 
 @import './_moreTheme.js';
 
@@ -622,6 +623,10 @@
           background-image: linear-gradient(90deg, gt.theme-var(text-color-6), gt.theme-var(bg-3) 30px, gt.theme-var(skeleton-bg) 60px);
           background-size: 200%;
         }
+      }
+
+      .award-card-with-awards-info {
+        height: 100%;
       }
     }
 
