--- a/src/web/stylesheets/common/sass/components/_achievement-card.scss
+++ b/src/web/stylesheets/common/sass/components/_achievement-card.scss
@@ -12,6 +12,7 @@
   padding: 3rem 0;
   height: 100%;
   border-radius: 0.75rem;
+  min-height: 8rem;
 
   &.award-card {
     background-color: gt.theme-var(more-award-card-bg, null, $thememaplight, $cssvars);
