video fixes and award modal

--- a/src/web/stylesheets/common/pages/courses/style.scss
+++ b/src/web/stylesheets/common/pages/courses/style.scss
@@ -21,6 +21,10 @@
   }
 }
 
+html {
+  --plyr-color-main: var(--course-nav-bg);
+}
+
 .course-card {
   width: 20rem;
   height: 11.25rem;
@@ -167,6 +171,10 @@
   margin: 0 auto;
   max-height: 640px;
   position: relative;
+
+  div {
+    border-radius: 12px;
+  }
 }
 
 .video-discription-container {
@@ -194,6 +202,10 @@
   .tag-container {
     margin-top: 1rem;
   }
+}
+
+.color-primary {
+  color: gt.theme-var(basic-color, null, $thememaplight, $cssvars);
 }
 
 .plyr--paused:after {
@@ -247,7 +259,7 @@
 }
 
 .rating-star-container {
-  margin: 3.5rem 0;
+  margin: 2rem 0;
 
   .rating-group {
     display: inline-flex;
@@ -451,6 +463,13 @@
   margin-left: 1rem;
 }
 
+.courses-container .course-details-mobile .module-progress-container {
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 12px;
+  margin: 0.5rem 0;
+}
+
 .module-progress {
   background-color: #fafafa;
   margin: 0 1rem;
@@ -462,7 +481,102 @@
   margin: 0 0 0 6px;
 }
 
+@media (max-width: 1140px) {
+  .progress-cont {
+    padding: 1rem;
+  }
+
+  .progress-card-cont {
+    margin: 1.5rem 1.25rem;
+  }
+
+  .course-card-container {
+    padding: 0 1.25rem;
+  }
+
+  .video-page-container {
+    padding: 0 1.25rem;
+  }
+}
+
+.rating-head {
+  padding: 1.5rem 4rem 0 4rem;
+}
+
+.award-des-head {
+  padding: 1.5rem 10rem 0 10rem;
+  margin-bottom: 3rem;
+}
+
+.custom-modal-rating {
+  max-width: 700px;
+}
+
+.continue-btn {
+  width: 100%;
+  margin-top: 2rem;
+  border-radius: 12px;
+}
+
+.coin-img-cont {
+  display: flex;
+  justify-content: center;
+}
+
+.award-icon {
+  height: 10rem;
+  width: 10rem;
+  margin: 0.5rem;
+}
+
+.award-container {
+  display: flex;
+}
+
+.modal-icon-container {
+  background-color: rgba(249, 168, 38, 0.15);
+  padding: 1rem;
+  border-radius: 12px;
+  display: flex;
+}
+
+.coin-icon {
+  height: 24px;
+  margin: 0 2px 0 6px;
+
+  img {
+    height: 100%;
+  }
+}
+
+.no-award-modal-container {
+  background-color: rgba(249, 168, 38, 0.15);
+  padding: 1.5rem 5rem;
+  margin-top: 3rem;
+  border-radius: 12px;
+  display: flex;
+
+  .coin-img-cont {
+    display: flex;
+    flex-direction: column;
+    margin: 0 1rem;
+
+    .coin-icon {
+      height: 64px;
+
+      img {
+        height: 100%;
+      }
+    }
+  }
+}
+
 @media (max-width: 768px) {
+
+  .video-player-container {
+    margin-top: 1rem;
+  }
+
   .course-card {
     width: 272px;
     height: 154px;
@@ -474,6 +588,45 @@
     .card-foot {
       p {
         font-size: 16px;
+      }
+    }
+  }
+
+  .award-icon {
+    height: 7rem;
+    width: 7rem;
+    margin: 0.5rem;
+  }
+  
+  .award-des-head {
+    padding: 1.5rem 1rem 0 1rem;
+    margin-bottom: 3rem;
+  }
+
+  .rating-head {
+    padding: 1.5rem 1rem 0 1rem;
+  }
+
+  .no-award-modal-container {
+    background-color: rgba(249, 168, 38, 0.15);
+    padding: 1.5rem 1rem;
+    margin-top: 3rem;
+    border-radius: 12px;
+    display: flex;
+  
+    .coin-img-cont {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 0 1rem;
+  
+      .coin-icon {
+        height: 64px;
+  
+        img {
+          height: 100%;
+        }
       }
     }
   }
@@ -595,7 +748,7 @@
 }
 
 .course-details-mobile {
-  .module-progress-container {
+  .module-ainer {
     padding: 1rem;
     background-color: #fff;
     border-radius: 12px;
